# input_arquivos

./: .env.example  .gitignore  CLAUDE.md  README.md  dados_pf.csv  dados_pf1.csv  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes_audit.py  routes_auth.py  routes_contexts.py  routes_upload.py  routes_users.py
app/auth/: __init__.py  dependencies.py  guard.py  session.py
app/db/: __init__.py  bootstrap.py  session.py
app/destinations/: __init__.py  base.py  key_builder.py  local_writer.py  minio_writer.py  registry.py  sqlserver_writer.py
app/ingestion/: __init__.py  file_types.py  parquet.py  pipeline.py  readers.py
app/models/: __init__.py  base.py  context.py  upload_history.py  user.py  user_context_access.py
app/schemas/: __init__.py  auth.py  context.py  upload.py  user.py
app/services/: __init__.py  auth_service.py  column_check.py  container.py  context_service.py  upload_service.py  user_context_service.py  user_service.py
app/static/css/: app.css
app/static/js/: admin_audit.js  admin_contexts.js  admin_users.js  common.js  login.js  upload.js
app/templates/: base.html  login.html  upload.html
app/templates/admin/: audit.html  contexts.html  dashboard.html  users.html
app/ui/: __init__.py  theme.py
app/ui/admin/: __init__.py  (+4 more)
app/web/: routes_pages.py
tests/: conftest.py  test_auth_service.py  test_column_check.py  test_context_service.py  test_file_types.py  test_ingestion.py  test_local_writer.py  test_parquet.py  test_sqlserver_writer.py  test_user_context_service.py  test_user_service.py
(+3 files in other folders)
